--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "tasks",
   "type": "progect",
   "license": "MIT",
+  "version": "1.0.0",
   "authors": [
     {
       "name": "Yan",
@@ -19,10 +20,10 @@
     "illuminate/events": "^7.22"
   },
   "autoload": {
-    "file": [
+    "files": [
       "db.php",
-      "route.php",
-      "tpl.php"
+      "tpl.php",
+      "routes.php"
     ],
     "psr-4": {
       "App\\": "app/"
