--- a/composer.json
+++ b/composer.json
@@ -29,5 +29,10 @@
     "psr-4": {
       "App\\": "app/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
   }
 }
